# kelly

./: CMakeLists.txt  make_vs10.bat  sdl.txt
eclipse/ned/: .cproject  .project
eclipse/ned/Debug/: sdl-config
eclipse/ned/src/: main.c
src/: CMakeLists.txt  main.c
